# mybot

my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: dominant_plane_with_obstacle_clustering.cpp  icp.cpp  planes.cpp  region_growing.cpp
mybot_basic_mov_control/: CMakeLists.txt  package.xml
mybot_basic_mov_control/src/: mybot_basic_mov_control.cpp
mybot_control/config/: mybot_control.yaml  mybot_localization.yaml
mybot_control/launch/: mybot_control.launch
mybot_description/launch/: mapping.launch  mybot_rviz_gmapping.launch
mybot_description/urdf/: mybot.gazebo  mybot.xacro
mybot_description/urdf/robot/: arm.xacro  arm_wide.xacro  chasis.xacro  defaults.xacro  imu.xacro  sensor.xacro  wheel.xacro
mybot_description/urdf/test/: robot.urdf
mybot_gazebo/launch/: gazebo_mapping_robot.launch  mapping.rviz  mybot_world.launch  octomapconfig
mybot_gazebo/worlds/: cpmbot_with_obstacles.world  mybot2.world
mybot_msg/: CMakeLists.txt  package.xml
mybot_msg/msg/: msgMybot_basicMovement.msg  msgMybot_jointInterface.msg
mybot_navigation/config/: costmap_common_params.yaml
mybot_navigation/launch/: gmapping_demo.launch
operator_input/: CMakeLists.txt  package.xml
operator_input/src/: operator_cmds (copy).cpp  operator_cmds.cpp
